Fixed some spacing.

--- a/assets/css/dashboard/new-pa-message/select-stations-page.scss
+++ b/assets/css/dashboard/new-pa-message/select-stations-page.scss
@@ -44,9 +44,14 @@
       }
 
       .route-groups {
-        padding: 16px 16px;
-        &:not(:nth-child(2)) {
-          padding-top: 0;
+        padding: 0 16px;
+
+        &:nth-child(2) {
+          padding-top: 16px;
+        }
+
+        &:last-child {
+          padding-bottom: 16px;
         }
 
         .station-group {
